[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/MenuGUI/SaveManager.gd" type="Script" id=1]
[ext_resource path="res://Fonts/18367.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="Save" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -275.0
margin_right = 200.0
margin_bottom = 275.0
rect_min_size = Vector2( 400, 550 )
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 10.0
margin_right = 88.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Сохранение"

[node name="SaveFiles" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 48.892
margin_right = -10.0
margin_bottom = -140.0
custom_styles/bg_focus = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -190.0
margin_top = -48.0
margin_right = 190.0
margin_bottom = -10.0
custom_constants/separation = 10
alignment = 1

[node name="Cancel" type="Button" parent="HBoxContainer"]
margin_right = 185.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Отмена"

[node name="Ok" type="Button" parent="HBoxContainer"]
margin_left = 195.0
margin_right = 380.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Сохранить"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = 189.0
margin_right = 190.0
margin_bottom = 213.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_top = 4.0
margin_right = 34.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "Имя:"

[node name="FileName" type="LineEdit" parent="HBoxContainer2"]
margin_left = 38.0
margin_right = 380.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SaveProgress" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = 153.0
margin_right = 190.0
margin_bottom = 175.0
[connection signal="item_selected" from="SaveFiles" to="." method="_on_SaveFiles_item_selected"]
[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/Ok" to="." method="_on_Ok_pressed"]
